overflow fixed

--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -756,7 +756,6 @@ footer {
         padding: 0;
         text-align: center;
         font-family: 'Open Sans', sans-serif;
-        overflow: hidden;
     }
 
     /* Estilo da classe main */
